Skip to content

Wrong routing for 7.1 Surround Rear output in Mac OS

We have developed a virtual core-audio device that supports a specific 7.1 configuration, L R C LFE Rls Rrs Ls Rs (7.1 Rear Surround, somewhat like MPEG 7.1 C).

However, VLC assumes that our device supports what Apple calls MPEG_7_1_A (7.1 Surround) layout, which is: L R C LFE Ls Rs Lc Rc

So, there's no mapping for Lc (Left Center) and Rc (Right center) in our case - these are totally different speaker positions (between Left and Center, and Right and Center respectively).

VLC tries to set this MPEG 7.1A layout, without even checking if this is compatible/supported. It gets an error from the OS, but the error is ignored, and so channels routings are wrong.

Edited by Filip Roséen
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information