auhal: fix 7.1 channel layout for macOS - fix #17556

Currently AUHAL drops rear surround channels if device layout is set to
`L R C LFE Rls Rrs Ls Rs` because it expects Left Center and Right Center
channels instead (as in MPEG_7_1_A). Setting input_layout to MPEG_7_1_C fixes
this issue.

Note that setting device layout to e.g. `L R C LFE Ls Rs Lc Rc` doesn't help,
because VLC doesn't recognize Lc/Rc channels - they're not present in
i_auhal_channel_mapping.

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>